--- a/src/StackOverflow.TagManagement.Api/StackOverflow.TagManagement.Api/StackOverflow.TagManagement.Api.csproj
+++ b/src/StackOverflow.TagManagement.Api/StackOverflow.TagManagement.Api/StackOverflow.TagManagement.Api.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
